added javadoc and fixed tests